--- a/pyproject.toml
+++ b/pyproject.toml
@@ -6,11 +6,11 @@ readme = "README.md"
 authors = [{ name = "Morten Hansen", email = "morten@winterop.com" }]
 requires-python = ">=3.12"
 dependencies = [
-    "fastapi-cli>=0.0.10",
     "fastapi[standard]>=0.116.1",
     "numpy>=2.3.2",
     "pandas>=2.3.2",
     "pydantic>=2.11.7",
+    "uvicorn>=0.35.0",
 ]
 
 [build-system]
@@ -18,7 +18,7 @@ requires = ["uv_build>=0.8.13,<0.9.0"]
 build-backend = "uv_build"
 
 [dependency-groups]
-dev = ["pytest>=8.4.1", "ruff>=0.12.11", "uvicorn>=0.35.0"]
+dev = ["fastapi-cli>=0.0.10", "pytest>=8.4.1", "ruff>=0.12.11"]
 
 [tool.ruff]
 target-version = "py312"
