--- a/pyproject.toml
+++ b/pyproject.toml
@@ -6,19 +6,19 @@ readme = "README.md"
 authors = [{ name = "Morten Hansen", email = "morten@winterop.com" }]
 requires-python = ">=3.12"
 dependencies = [
-    "fastapi-cli>=0.0.10",
     "fastapi[standard]>=0.116.1",
     "geojson-pydantic>=2.0.0",
-    "numpy>=2.3.2",
     "pandas>=2.3.2",
     "pydantic>=2.11.7",
     "python-dotenv>=1.1.1",
-    "uvicorn>=0.35.0",
 ]
 
 [build-system]
-requires = ["uv_build>=0.8.13,<0.9.0"]
+requires = ["uv_build>=0.8.14,<0.9.0"]
 build-backend = "uv_build"
+
+[tool.uv.build-backend]
+data = { data = "templates" }
 
 [dependency-groups]
 dev = ["pytest>=8.4.1", "ruff>=0.12.11"]
