--- a/pyproject.toml
+++ b/pyproject.toml
@@ -11,6 +11,7 @@ dependencies = [
     "pandas>=2.3.2",
     "pydantic>=2.11.7",
     "python-dotenv>=1.1.1",
+    "sqlalchemy>=2.0.43",
 ]
 
 [build-system]
