--- a/pyproject.toml
+++ b/pyproject.toml
@@ -6,7 +6,7 @@ readme = "README.md"
 authors = [{ name = "Morten Hansen", email = "morten@winterop.com" }]
 requires-python = ">=3.13"
 dependencies = [
-    "fastapi[standard]>=0.116.1",
+    "fastapi[standard]>=0.116.2",
     "geojson-pydantic>=2.0.0",
     "pandas>=2.3.2",
     "pydantic>=2.11.9",
@@ -22,14 +22,10 @@ build-backend = "uv_build"
 data = { data = "templates" }
 
 [dependency-groups]
-dev = [
-    "pytest>=8.4.2",
-    "pytest-asyncio>=1.2.0",
-    "ruff>=0.13.0",
-]
+dev = ["pytest>=8.4.2", "pytest-asyncio>=1.2.0", "ruff>=0.13.1"]
 
 [tool.ruff]
-target-version = "py312"
+target-version = "py313"
 line-length = 120
 
 [tool.ruff.lint]
