--- a/pyproject.toml
+++ b/pyproject.toml
@@ -13,6 +13,7 @@ dependencies = [
     "python-dotenv>=1.1.1",
     "python-ulid>=3.1.0",
     "sqlalchemy>=2.0.43",
+    "structlog>=25.4.0",
 ]
 
 [build-system]
