--- a/pyproject.toml
+++ b/pyproject.toml
@@ -24,7 +24,11 @@ build-backend = "uv_build"
 data = { data = "templates" }
 
 [dependency-groups]
-dev = ["pytest>=8.4.2", "pytest-asyncio>=1.2.0", "ruff>=0.13.1"]
+dev = [
+    "pytest>=8.4.2",
+    "pytest-asyncio>=1.2.0",
+    "ruff>=0.13.2"
+]
 
 [tool.ruff]
 target-version = "py313"
