chore: toml formatting

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -27,7 +27,7 @@ data = { data = "templates" }
 dev = [
     "pytest>=8.4.2",
     "pytest-asyncio>=1.2.0",
-    "ruff>=0.13.2"
+    "ruff>=0.13.2",
 ]
 
 [tool.ruff]
