--- a/pyproject.toml
+++ b/pyproject.toml
@@ -8,6 +8,7 @@ requires-python = ">=3.13"
 dependencies = [
     "fastapi[standard]>=0.118.0",
     "geojson-pydantic>=2.0.0",
+    "numpy>=2.3.2",
     "pandas>=2.3.2",
     "pydantic>=2.11.9",
     "python-dotenv>=1.1.1",
