fix: use GitHub URL for servicekit dependency instead of local path
- Change from editable local path to GitHub repository
- Fixes CI failure on GitHub Actions where local path doesn't exist
- Local development can still use editable install with override

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -138,4 +138,4 @@ reportMissingTypeArgument = false
 reportMissingTypeStubs = false
 
 [tool.uv.sources]
-servicekit = { path = "/Users/morten/dev/servicekit", editable = true }
+servicekit = { git = "https://github.com/winterop-com/servicekit.git" }
