fix: correct API reference paths and add navigation
- Fix model runner paths (use chapkit.ml.runner not model_runner)
- Add all guides to mkdocs navigation (artifact-storage, task-execution)
- Add API reference to navigation

Fixes documentation deployment errors.

--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -32,7 +32,10 @@ theme:
 nav:
   - Home: index.md
   - Guides:
+      - Artifact Storage: guides/artifact-storage.md
+      - Task Execution: guides/task-execution.md
       - ML Workflows: guides/ml-workflows.md
+  - API Reference: api-reference.md
 
 markdown_extensions:
   - admonition
