refactor: complete examples restructuring and fix Docker builds
This commit completes the examples refactoring with Docker support and dependency updates:

Examples Restructured:
- Moved all standalone .py examples into proper directory structure
- Each example now has: main.py, Dockerfile, compose.yml, postman_collection.json
- Added artifact/, config_basic/, library_usage/, ml_class/, ml_shell/ examples
- Removed old standalone files and outdated docker/ directory

Dependency Updates:
- Updated servicekit from v0.1.0 to v0.2.0 (includes gunicorn.conf.py)
- Fixed ml_functional/uv.lock (corrected package name reference)
- All examples now use updated servicekit with proper workspace paths

Docker Build Fixes:
- Fixed Dockerfiles for examples with editable chapkit dependency
- Changed from /app to /workspace structure to preserve relative paths
- Updated: config, config_artifact, full_featured, ml_functional, task_execution
- All Docker builds now work with editable installs via ../../

Code Quality:
- Removed all emoji usage from full_featured and ml_pipeline examples
- Removed structured logging from full_featured (using standard logging)
- Clean JSON logging output in Docker containers

Cleanup:
- Deleted obsolete examples/docs/ directory (referenced old file structure)
- Removed old docker/monitoring/ setup (moved to full_featured example)
- Removed examples/__init__.py (not needed)

All 12 examples now build and run successfully with consistent structure.

--- a/examples/ml_functional/Dockerfile
+++ b/examples/ml_functional/Dockerfile
@@ -1,33 +1,31 @@
 # ML Functional Demo Dockerfile
 FROM ghcr.io/astral-sh/uv:0.9-python3.13-bookworm-slim AS builder
 
-WORKDIR /app
+WORKDIR /workspace
 
 ARG USER=chapkit UID=10001
 RUN useradd -u ${UID} -m -s /bin/bash ${USER}
+
+# Install git for fetching dependencies from git repositories
+RUN apt-get update && apt-get install -y git && rm -rf /var/lib/apt/lists/*
 
 # UV configuration for better build performance
 ENV UV_COMPILE_BYTECODE=1
 ENV UV_LINK_MODE=copy
 
-# Copy and build parent chapkit project
-COPY pyproject.toml uv.lock README.md /chapkit/
-COPY src /chapkit/src/
-WORKDIR /chapkit
-RUN uv build
+# Copy entire project structure to maintain relative paths for editable installs
+COPY pyproject.toml uv.lock README.md ./
+COPY src ./src/
+COPY examples/ml_functional ./examples/ml_functional/
 
-# Install chapkit wheel in app directory
-WORKDIR /app
+# Install from example directory (which references parent via ../../)
+WORKDIR /workspace/examples/ml_functional
 RUN --mount=type=cache,target=/root/.cache/uv \
-    uv venv && \
-    uv pip install /chapkit/dist/*.whl
-
-# Copy demo files
-COPY examples/ml_functional/main.py ./
+    uv sync --frozen --no-dev
 
 # Cleanup Python cache files
-RUN find /app/.venv -type d -name '__pycache__' -prune -exec rm -rf {} + && \
-    find /app/.venv -type f -name '*.py[co]' -delete || true
+RUN find .venv -type d -name '__pycache__' -prune -exec rm -rf {} + && \
+    find .venv -type f -name '*.py[co]' -delete || true
 
 # ---- runtime ----
 FROM python:3.13-slim AS runtime
@@ -38,8 +36,6 @@ LABEL org.opencontainers.image.description="Disease prediction ML service using 
 LABEL org.opencontainers.image.vendor="Chapkit"
 LABEL org.opencontainers.image.source="https://github.com/dhis2-chap/chapkit"
 
-WORKDIR /app
-
 ARG USER=chapkit UID=10001
 RUN useradd -u ${UID} -m -s /bin/bash ${USER}
 
@@ -49,12 +45,15 @@ RUN --mount=type=cache,target=/var/cache/apt,sharing=locked \
     apt-get install -y --no-install-recommends ca-certificates tini && \
     apt-get clean && rm -rf /var/lib/apt/lists/*
 
-# Copy venv and application from builder
-COPY --from=builder --chown=${USER}:${USER} /app/.venv /app/.venv
-COPY --from=builder --chown=${USER}:${USER} /app/main.py /app/main.py
+# Copy entire structure to preserve paths for editable chapkit install
+COPY --from=builder --chown=${USER}:${USER} /workspace /workspace
 
-ENV VIRTUAL_ENV=/app/.venv
-ENV PATH=/app/.venv/bin:${PATH}
+WORKDIR /workspace/examples/ml_functional
+
+# Set up environment to use the venv from example directory
+ENV VIRTUAL_ENV=/workspace/examples/ml_functional/.venv
+ENV PATH=/workspace/examples/ml_functional/.venv/bin:${PATH}
+ENV PYTHONPATH=/workspace
 ENV PYTHONDONTWRITEBYTECODE=1
 ENV PYTHONUNBUFFERED=1
 ENV PYTHONFAULTHANDLER=1
