--- a/examples/artifact/Dockerfile
+++ b/examples/artifact/Dockerfile
@@ -1,7 +1,7 @@
-# Task Execution Demo Dockerfile
+# Artifact Demo Dockerfile
 FROM ghcr.io/astral-sh/uv:0.9-python3.13-bookworm-slim AS builder
 
-WORKDIR /workspace
+WORKDIR /app
 
 ARG USER=chapkit UID=10001
 RUN useradd -u ${UID} -m -s /bin/bash ${USER}
@@ -13,15 +13,15 @@ RUN apt-get update && apt-get install -y git && rm -rf /var/lib/apt/lists/*
 ENV UV_COMPILE_BYTECODE=1
 ENV UV_LINK_MODE=copy
 
-# Copy entire project structure to maintain relative paths for editable installs
-COPY pyproject.toml uv.lock README.md ./
-COPY src ./src/
-COPY examples/task_execution ./examples/task_execution/
-
-# Install from example directory (which references parent via ../../)
-WORKDIR /workspace/examples/task_execution
+# Copy and sync parent chapkit project with git dependencies
+COPY pyproject.toml uv.lock README.md /chapkit/
+COPY src /chapkit/src/
+WORKDIR /chapkit
 RUN --mount=type=cache,target=/root/.cache/uv \
     uv sync --frozen --no-dev
+
+# Copy demo files
+COPY examples/artifact/main.py /chapkit/main.py
 
 # Cleanup Python cache files
 RUN find .venv -type d -name '__pycache__' -prune -exec rm -rf {} + && \
@@ -31,10 +31,12 @@ RUN find .venv -type d -name '__pycache__' -prune -exec rm -rf {} + && \
 FROM python:3.13-slim AS runtime
 
 # OCI labels for container metadata
-LABEL org.opencontainers.image.title="Chapkit Task Execution Demo"
-LABEL org.opencontainers.image.description="Task execution demo with Python functions, shell commands, and dependency injection"
+LABEL org.opencontainers.image.title="Chapkit Artifact Demo"
+LABEL org.opencontainers.image.description="Read-only artifact API with hierarchical storage and non-JSON payloads"
 LABEL org.opencontainers.image.vendor="Chapkit"
 LABEL org.opencontainers.image.source="https://github.com/dhis2-chap/chapkit"
+
+WORKDIR /chapkit
 
 ARG USER=chapkit UID=10001
 RUN useradd -u ${UID} -m -s /bin/bash ${USER}
@@ -45,15 +47,13 @@ RUN --mount=type=cache,target=/var/cache/apt,sharing=locked \
     apt-get install -y --no-install-recommends ca-certificates tini && \
     apt-get clean && rm -rf /var/lib/apt/lists/*
 
-# Copy entire structure to preserve paths for editable chapkit install
-COPY --from=builder --chown=${USER}:${USER} /workspace /workspace
+# Copy venv and application from builder (keeping at /chapkit to preserve paths)
+COPY --from=builder --chown=${USER}:${USER} /chapkit/.venv .venv
+COPY --from=builder --chown=${USER}:${USER} /chapkit/main.py main.py
+COPY --from=builder --chown=${USER}:${USER} /chapkit/src src
 
-WORKDIR /workspace/examples/task_execution
-
-# Set up environment to use the venv from example directory
-ENV VIRTUAL_ENV=/workspace/examples/task_execution/.venv
-ENV PATH=/workspace/examples/task_execution/.venv/bin:${PATH}
-ENV PYTHONPATH=/workspace
+ENV VIRTUAL_ENV=/chapkit/.venv
+ENV PATH=/chapkit/.venv/bin:${PATH}
 ENV PYTHONDONTWRITEBYTECODE=1
 ENV PYTHONUNBUFFERED=1
 ENV PYTHONFAULTHANDLER=1
