--- a/pyproject.toml
+++ b/pyproject.toml
@@ -52,6 +52,7 @@ dev = [
   "mkdocs>=1.6.0",
   "mkdocs-material>=9.5.0",
   "mkdocstrings[python]>=0.26.0",
+  "types-pyyaml>=6.0.12.20250915",
 ]
 
 [build-system]
