--- a/pyproject.toml
+++ b/pyproject.toml
@@ -112,7 +112,6 @@ warn_return_any = true
 warn_unused_configs = true
 disallow_untyped_defs = true
 check_untyped_defs = true
-disallow_any_unimported = true
 no_implicit_optional = true
 warn_unused_ignores = true
 strict_equality = true
@@ -121,6 +120,20 @@ mypy_path = ["src", "typings"]
 [[tool.mypy.overrides]]
 module = "tests.*"
 disallow_untyped_defs = false
+
+[[tool.mypy.overrides]]
+module = "servicekit.*"
+ignore_missing_imports = true
+disallow_any_unimported = false
+
+[[tool.mypy.overrides]]
+module = [
+    "chapkit.artifact.*",
+    "chapkit.config.*",
+    "chapkit.task.*",
+    "examples.*",
+]
+warn_return_any = false
 
 [tool.pyright]
 include = ["src", "tests", "examples", "alembic"]
