chore: ignore example uv.lock files and add to make clean
Example uv.lock files should not be tracked since they use editable
local chapkit installations and will differ between environments.

Changes:
- Add examples/*/uv.lock to .gitignore
- Remove 12 tracked uv.lock files from examples
- Add uv.lock cleanup to make clean target

Developers can regenerate example locks by running 'uv sync' in any
example directory as needed.

--- a/.gitignore
+++ b/.gitignore
@@ -150,3 +150,6 @@ alembic.ini.bak
 
 # Ruff cache
 .ruff_cache/
+
+# Example uv.lock files (examples use local editable chapkit)
+examples/*/uv.lock
