feat: add Docker support for ml_pipeline and quickstart examples
Create Dockerfiles and compose.yml files for ml_pipeline and quickstart
examples to match other examples' Docker setup.

Changes:
- Add examples/ml_pipeline/Dockerfile with multi-stage build
- Add examples/ml_pipeline/compose.yml with WORKERS=1 config
- Add examples/quickstart/Dockerfile with multi-stage build
- Add examples/quickstart/compose.yml with WORKERS=1 config
- Update all Dockerfiles to use 'uv sync --no-dev' (removed --frozen)

All 12 examples now have Docker support.

--- a/examples/full_featured/Dockerfile
+++ b/examples/full_featured/Dockerfile
@@ -21,7 +21,7 @@ COPY examples/full_featured ./examples/full_featured/
 # Install from example directory (which references parent via ../../)
 WORKDIR /workspace/examples/full_featured
 RUN --mount=type=cache,target=/root/.cache/uv \
-    uv sync --frozen --no-dev
+    uv sync --no-dev
 
 # Cleanup Python cache files
 RUN find .venv -type d -name '__pycache__' -prune -exec rm -rf {} + && \
