--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -32,9 +32,11 @@ theme:
 nav:
   - Home: index.md
   - Guides:
+      - Configuration Management: guides/configuration-management.md
       - Artifact Storage: guides/artifact-storage.md
       - Task Execution: guides/task-execution.md
       - ML Workflows: guides/ml-workflows.md
+      - Database Migrations: guides/database-migrations.md
   - API Reference: api-reference.md
 
 markdown_extensions:
