refactor: restructure CLI to use init subcommand
Restructure CLI to use explicit subcommands for future extensibility:

Changes:
- Rename main.py to init.py for init subcommand implementation
- Create cli.py as main CLI app with subcommand registration
- Add callback to force subcommand usage (chapkit init instead of just chapkit)
- Update all entry points to use cli.py instead of main.py
- Update documentation to reflect chapkit init command syntax
- Change development command from fastapi dev to uv run python main.py

CLI Structure:
- cli.py: Main Typer app with subcommand registration
- init.py: Init subcommand implementation with helper functions
- __init__.py: Exports app from cli.py
- __main__.py: Entry point using cli.py main()

Benefits:
- Clear subcommand structure for adding future commands
- Consistent with standard CLI patterns
- Better UX with explicit command names
- Easier to extend with additional commands later

All tests passing (306 passed, 1 skipped).

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -41,7 +41,7 @@ Issues = "https://github.com/dhis2-chap/chapkit/issues"
 Documentation = "https://dhis2-chap.github.io/chapkit"
 
 [project.scripts]
-chapkit = "chapkit.cli.main:main"
+chapkit = "chapkit.cli.cli:main"
 
 [dependency-groups]
 dev = [
