feat: add CLI scaffolding tool for project initialization (#2)
* feat: add CLI scaffolding tool for project initialization

Add a comprehensive CLI tool (chapkit command) for scaffolding new ML service projects:

Features:
- Initialize new projects with single command: chapkit PROJECT_NAME
- Generate complete project structure (main.py, Dockerfile, compose.yml, etc.)
- Optional monitoring stack with --monitoring flag (Prometheus + Grafana)
- Simple template without external ML dependencies (pandas/structlog only)
- Jinja2-based templates for customization
- Multi-stage Docker build with gunicorn/uvicorn
- Proper documentation and README generation

CLI Implementation:
- Typer-based CLI with user-friendly interface
- Entry point via pyproject.toml [project.scripts]
- Support for python -m chapkit.cli execution
- Project name slugification for valid Python package names
- Template directory structure with monitoring configs

Templates:
- main.py: FunctionalModelRunner with simple mean-based model
- pyproject.toml: Minimal dependencies (chapkit only)
- Dockerfile: Multi-stage build optimized for production
- compose.yml: Basic service or full monitoring stack
- README.md: Complete quickstart and API documentation
- Monitoring configs: Prometheus scraping + Grafana dashboards

Documentation:
- Add comprehensive CLI guide in docs/guides/cli-scaffolding.md
- Usage examples, customization tips, development workflow
- Installation via uv tool install

Dependencies added: typer>=0.20.0, jinja2>=3.1.6

* refactor: restructure CLI to use init subcommand

Restructure CLI to use explicit subcommands for future extensibility:

Changes:
- Rename main.py to init.py for init subcommand implementation
- Create cli.py as main CLI app with subcommand registration
- Add callback to force subcommand usage (chapkit init instead of just chapkit)
- Update all entry points to use cli.py instead of main.py
- Update documentation to reflect chapkit init command syntax
- Change development comm

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,6 +1,6 @@
 [project]
 name = "chapkit"
-version = "0.3.2"
+version = "0.4.0"
 description = "ML and data service modules built on servicekit - config, artifacts, tasks, and ML workflows"
 readme = "README.md"
 authors = [{ name = "Morten Hansen", email = "morten@winterop.com" }]
@@ -30,6 +30,8 @@ dependencies = [
   "scikit-learn>=1.7.2",
   "geojson-pydantic>=2.1.0",
   "servicekit>=0.2.0",
+  "typer>=0.20.0",
+  "jinja2>=3.1.6",
 ]
 
 [project.urls]
@@ -37,6 +39,9 @@ Homepage = "https://github.com/dhis2-chap/chapkit"
 Repository = "https://github.com/dhis2-chap/chapkit"
 Issues = "https://github.com/dhis2-chap/chapkit/issues"
 Documentation = "https://dhis2-chap.github.io/chapkit"
+
+[project.scripts]
+chapkit = "chapkit.cli.cli:main"
 
 [dependency-groups]
 dev = [
