--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -32,6 +32,7 @@ theme:
 nav:
   - Home: index.md
   - Guides:
+      - CLI Scaffolding: guides/cli-scaffolding.md
       - Configuration Management: guides/configuration-management.md
       - Artifact Storage: guides/artifact-storage.md
       - Task Execution: guides/task-execution.md
