fix: use git dependency for servicekit instead of local path
The editable local path dependency fails in CI where ../servicekit doesn't exist.
Switch to git dependency from winterop-com/servicekit main branch.

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -162,4 +162,4 @@ reportMissingTypeArgument = false
 reportMissingTypeStubs = false
 
 [tool.uv.sources]
-servicekit = { path = "../servicekit", editable = true }
+servicekit = { git = "https://github.com/winterop-com/servicekit" }
