--- a/pyproject.toml
+++ b/pyproject.toml
@@ -26,7 +26,6 @@ classifiers = [
   "Topic :: Scientific/Engineering :: Artificial Intelligence",
 ]
 dependencies = [
-  "pandas>=2.3.3",
   "scikit-learn>=1.7.2",
   "geojson-pydantic>=2.1.0",
   "servicekit>=0.2.0",
@@ -58,6 +57,9 @@ dev = [
   "mkdocs-material>=9.5.0",
   "mkdocstrings[python]>=0.26.0",
   "types-pyyaml>=6.0.12.20250915",
+  "pandas>=2.3.3",
+  "polars>=1.34.0",
+  "xarray>=2025.10.1",
 ]
 
 [build-system]
@@ -149,11 +151,9 @@ ignore_errors = true
 include = ["src", "tests", "examples", "alembic"]
 pythonVersion = "3.13"
 typeCheckingMode = "strict"
-diagnosticMode = "workspace"
 useLibraryCodeForTypes = true
 reportPrivateUsage = false
 reportUnusedFunction = false
-reportUnusedTypeParameters = true
 reportUnknownMemberType = false
 reportUnknownArgumentType = false
 reportUnknownParameterType = false
@@ -162,4 +162,4 @@ reportMissingTypeArgument = false
 reportMissingTypeStubs = false
 
 [tool.uv.sources]
-servicekit = { git = "https://github.com/winterop-com/servicekit.git" }
+servicekit = { git = "https://github.com/winterop-com/servicekit" }
