--- a/pyproject.toml
+++ b/pyproject.toml
@@ -105,6 +105,7 @@ branch = true
 dynamic_context = "test_function"
 relative_files = true
 source = ["chapkit"]
+omit = ["*/alembic/*"]
 
 [tool.coverage.report]
 exclude_also = ["if TYPE_CHECKING:"]
