feat: add DataFrame module from servicekit, bump to 0.5.0
Major enhancement bringing data interchange functionality to chapkit:
- Add chapkit.data module with DataFrame and GroupBy classes
- Import DataFrame examples from servicekit
- Import DataFrame tests from servicekit
- Import DataFrame documentation from servicekit
- Add data dependencies: pandas, polars, xarray, numpy
- Update all imports from servicekit.data to chapkit.data
- Update servicekit dependency to >=0.5.0
- Bump version to 0.5.0

DataFrame provides universal data interchange between pandas, polars,
xarray and other data libraries - a perfect fit for chapkit's data
science and ML focus.

All tests pass (574 passed, 1 skipped).

--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -37,6 +37,7 @@ nav:
       - Artifact Storage: guides/artifact-storage.md
       - Task Execution: guides/task-execution.md
       - ML Workflows: guides/ml-workflows.md
+      - DataFrame: guides/dataframe.md
       - Database Migrations: guides/database-migrations.md
   - API Reference: api-reference.md
 
