--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,6 +1,6 @@
 [project]
 name = "chapkit"
-version = "0.4.14"
+version = "0.5.0"
 description = "ML and data service modules built on servicekit - config, artifacts, tasks, and ML workflows"
 readme = "README.md"
 authors = [{ name = "Morten Hansen", email = "morten@dhis2.org" }]
@@ -29,7 +29,11 @@ dependencies = [
   "geojson-pydantic>=2.1.0",
   "typer>=0.20.0",
   "jinja2>=3.1.6",
-  "servicekit>=0.3.5",
+  "servicekit>=0.5.0",
+  "pandas>=2.3.3",
+  "polars>=1.34.0",
+  "xarray>=2025.10.1",
+  "numpy>=2.3.0",
 ]
 
 [project.urls]
@@ -56,9 +60,6 @@ dev = [
   "mkdocs-material>=9.5.0",
   "mkdocstrings[python]>=0.26.0",
   "types-pyyaml>=6.0.12.20250915",
-  "pandas>=2.3.3",
-  "polars>=1.34.0",
-  "xarray>=2025.10.1",
 ]
 
 [build-system]
@@ -160,3 +161,4 @@ reportUnknownParameterType = false
 reportUnknownVariableType = false
 reportMissingTypeArgument = false
 reportMissingTypeStubs = false
+reportUnknownLambdaType = false
