chore: exclude CLI from coverage reports
The CLI module is a command-line tool that is manually tested
rather than unit tested. Exclude it from coverage reports to
prevent false negatives in codecov checks.

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -106,7 +106,7 @@ branch = true
 dynamic_context = "test_function"
 relative_files = true
 source = ["chapkit"]
-omit = ["*/alembic/*"]
+omit = ["*/alembic/*", "*/cli/*"]
 
 [tool.coverage.report]
 exclude_also = ["if TYPE_CHECKING:"]
