--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,6 +1,6 @@
 [project]
 name = "chapkit"
-version = "0.7.0"
+version = "0.7.1"
 description = "ML and data service modules built on servicekit - config, artifacts, tasks, and ML workflows"
 readme = "README.md"
 authors = [{ name = "Morten Hansen", email = "morten@dhis2.org" }]
@@ -29,7 +29,7 @@ dependencies = [
   "geojson-pydantic>=2.1.0",
   "typer>=0.20.0",
   "jinja2>=3.1.6",
-  "servicekit>=0.5.1",
+  "servicekit==0.5.2",
   "pandas>=2.3.3",
   "polars>=1.34.0",
   "xarray>=2025.10.1",
