Use local chapkit source in ml_r example

--- a/examples/ml_r/pyproject.toml
+++ b/examples/ml_r/pyproject.toml
@@ -3,7 +3,7 @@ name = "ml-r-example"
 version = "0.1.0"
 description = "R model integration example for chapkit"
 requires-python = ">=3.13"
-dependencies = ["chapkit"]
+dependencies = ["chapkit @ file:///${PROJECT_ROOT}/../.."]
 
 [tool.uv]
 dev-dependencies = []
