test: add CLI scaffolding integration tests
- Add tests/test_cli_scaffolding.py with 7 end-to-end tests
- Tests scaffold projects, patch to use local chapkit, run train/predict
- Mark tests as slow with pytest marker
- Update Makefile: test excludes slow, add test-slow and test-durations
- Add slow tests to CI workflow as sequential step

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -32,6 +32,9 @@ jobs:
     - name: Run tests with coverage
       run: make coverage
 
+    - name: Run slow CLI scaffolding tests
+      run: make test-slow
+
     - name: Upload coverage reports to Codecov
       uses: codecov/codecov-action@v5
       with:
