--- a/pyproject.toml
+++ b/pyproject.toml
@@ -100,6 +100,9 @@ filterwarnings = [
   "ignore:Pydantic serializer warnings:UserWarning",
   "ignore:Remove.*format_exc_info.*:UserWarning",
 ]
+markers = [
+  "slow: marks tests as slow (deselect with '-m \"not slow\"')",
+]
 
 [tool.coverage.run]
 branch = true
