feat: store prediction workspace as artifact for ShellModelRunner (#18)
* feat: store prediction workspace as artifact for ShellModelRunner

- Add create_prediction_artifact() method to ShellModelRunner for zipping
  prediction workspace
- Modify on_predict() to return workspace dict (like on_train()) instead
  of DataFrame
- Update MLManager._predict_task() to detect ShellModelRunner and create
  workspace artifact (level 1, parent_id = training artifact)
- Workspace includes predictions.csv, logs, and all intermediate files
- Update tests to handle new return type from on_predict()
- Update ml-workflows.md documentation with prediction artifact schema

* chore: bump version to 0.10.5

* fix: store predictions DataFrame in level 1, workspace ZIP in level 2

Previous implementation incorrectly replaced predictions DataFrame with
workspace ZIP in the prediction artifact. This fix separates them:

- Prediction artifact (level 1): Contains predictions DataFrame
  (same format for ShellModelRunner and FunctionalModelRunner)
- Workspace artifact (level 2): Contains workspace ZIP for debugging
  (ShellModelRunner only, child of prediction artifact)

Hierarchy:
  Config -> Training (L0) -> Prediction (L1) -> Workspace (L2)

Changes:
- Add MLWorkspaceArtifactData schema (type="ml_workspace")
- Fix MLManager._predict_task() to store both artifacts
- Update docs/guides/ml-workflows.md with correct hierarchy
- Fix test assertions to expect DataFrame content

* fix: add create_prediction_artifact to protocol and fix type errors

* refactor: rename ML artifact types for clarity

- ml_training -> ml_training_workspace
- ml_workspace -> ml_prediction_workspace
- MLTrainingArtifactData -> MLTrainingWorkspaceArtifactData
- MLWorkspaceArtifactData -> MLPredictionWorkspaceArtifactData

Updated across core schemas, ML module, tests, examples, docs, and CLI templates.

* refactor: unify workspace handling and add requires_geo metadata

- Extract shared workspace helpers to module level 

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,6 +1,6 @@
 [project]
 name = "chapkit"
-version = "0.10.4"
+version = "0.10.5"
 description = "ML and data service modules built on servicekit - config, artifacts, tasks, and ML workflows"
 readme = "README.md"
 authors = [{ name = "Morten Hansen", email = "morten@dhis2.org" }]
@@ -100,6 +100,9 @@ filterwarnings = [
   "ignore:Pydantic serializer warnings:UserWarning",
   "ignore:Remove.*format_exc_info.*:UserWarning",
 ]
+markers = [
+  "slow: marks tests as slow (deselect with '-m \"not slow\"')",
+]
 
 [tool.coverage.run]
 branch = true
@@ -154,7 +157,7 @@ ignore_errors = true
 
 [tool.pyright]
 include = ["src", "tests", "examples"]
-exclude = ["examples/artifact_manager"]
+exclude = ["examples/artifact_manager", "**/.venv"]
 pythonVersion = "3.13"
 typeCheckingMode = "strict"
 useLibraryCodeForTypes = true
