--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,6 +1,6 @@
 [project]
 name = "chapkit"
-version = "0.11.0"
+version = "0.11.1"
 description = "ML and data service modules built on servicekit - config, artifacts, tasks, and ML workflows"
 readme = "README.md"
 authors = [{ name = "Morten Hansen", email = "morten@dhis2.org" }]
@@ -30,6 +30,10 @@ dependencies = [
   "typer>=0.21.0",
   "jinja2>=3.1.6",
   "servicekit>=0.5.3",
+]
+
+[project.optional-dependencies]
+dataframe = [
   "pandas>=2.3.3",
   "polars>=1.34.0",
   "xarray>=2025.10.1",
