--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,6 +1,6 @@
 [project]
 name = "chapkit"
-version = "0.11.1"
+version = "0.11.2"
 description = "ML and data service modules built on servicekit - config, artifacts, tasks, and ML workflows"
 readme = "README.md"
 authors = [{ name = "Morten Hansen", email = "morten@dhis2.org" }]
@@ -33,12 +33,10 @@ dependencies = [
 ]
 
 [project.optional-dependencies]
-dataframe = [
-  "pandas>=2.3.3",
-  "polars>=1.34.0",
-  "xarray>=2025.10.1",
-  "numpy>=2",
-]
+pandas = ["pandas>=2.3.3"]
+polars = ["polars>=1.34.0"]
+xarray = ["xarray>=2025.10.1", "pandas>=2.3.3"]
+dataframe = ["pandas>=2.3.3", "polars>=1.34.0", "xarray>=2025.10.1"]
 
 [project.urls]
 Homepage = "https://github.com/dhis2-chap/chapkit"
