--- a/pyproject.toml
+++ b/pyproject.toml
@@ -30,6 +30,7 @@ dependencies = [
   "typer>=0.21.0",
   "jinja2>=3.1.6",
   "servicekit>=0.5.3",
+  "httpx>=0.28.1",
 ]
 
 [project.optional-dependencies]
