fix: update test for pandas 3.0 None handling in string columns
Pandas 3.0 changed default string dtype behavior where None values
become nan instead of staying as None. Updated test_pandas_with_none
to use pd.isna() check instead of identity comparison.

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -63,6 +63,8 @@ dev = [
   "mkdocs-material>=9.7.1",
   "mkdocstrings[python]>=0.26.0",
   "types-pyyaml>=6.0.12.20250915",
+  "pandas>=3.0.0",
+  "numpy>=2.4.1",
 ]
 
 [build-system]
