--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,6 +1,6 @@
 [project]
 name = "chapkit"
-version = "0.14.1"
+version = "0.15.0"
 description = "ML and data service modules built on servicekit - config, artifacts, tasks, and ML workflows"
 readme = "README.md"
 authors = [{ name = "Morten Hansen", email = "morten@dhis2.org" }]
@@ -29,7 +29,7 @@ dependencies = [
   "geojson-pydantic>=2.1.0",
   "typer>=0.21.0",
   "jinja2>=3.1.6",
-  "servicekit>=0.6.0",
+  "servicekit>=0.7.0",
   "httpx>=0.28.1",
 ]
 
@@ -63,6 +63,8 @@ dev = [
   "mkdocs-material>=9.7.1",
   "mkdocstrings[python]>=0.26.0",
   "types-pyyaml>=6.0.12.20250915",
+  "pandas>=3.0.0",
+  "numpy>=2.4.1",
 ]
 
 [build-system]
